fix overflow for frame body
no scrolling should happen

--- a/app/assets/stylesheets/fassets_presentations/templates/uzl_corporate/styles.css
+++ b/app/assets/stylesheets/fassets_presentations/templates/uzl_corporate/styles.css
@@ -4,6 +4,7 @@
 }
 body {
   font-family: Verdana,Arial,Helvetica,sans-serif;
+  overflow: hidden;
 }
 img {
   border: 0;
